// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginList should renders default 1`] = `
<styled.div>
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export to Laravel file"
    id="1"
    image="image.png"
    isActive={false}
    key="0"
    name="Laravel Exporter"
    onClick={[Function]}
  />
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export to SQL file"
    id="2"
    image="image.png"
    isActive={false}
    key="1"
    name="SQL Exporter"
    onClick={[Function]}
  />
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export to MongoDB file"
    id="3"
    image="image.png"
    isActive={false}
    key="2"
    name="MongoDB Exporter"
    onClick={[Function]}
  />
</styled.div>
`;

exports[`PluginList should renders with active item 1`] = `
<styled.div>
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export to Laravel file"
    id="1"
    image="image.png"
    isActive={false}
    key="0"
    name="Laravel Exporter"
    onClick={[Function]}
  />
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export to SQL file"
    id="2"
    image="image.png"
    isActive={true}
    key="1"
    name="SQL Exporter"
    onClick={[Function]}
  />
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export to MongoDB file"
    id="3"
    image="image.png"
    isActive={false}
    key="2"
    name="MongoDB Exporter"
    onClick={[Function]}
  />
</styled.div>
`;

exports[`PluginList should renders with excerpt 1`] = `
<styled.div>
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export scheme to Larav..."
    id="1"
    image="image.png"
    isActive={false}
    key="0"
    name="Laravel Exporter"
    onClick={[Function]}
  />
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export scheme to SQL f..."
    id="2"
    image="image.png"
    isActive={false}
    key="1"
    name="SQL Exporter"
    onClick={[Function]}
  />
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export scheme to Mongo..."
    id="3"
    image="image.png"
    isActive={false}
    key="2"
    name="MongoDB Exporter"
    onClick={[Function]}
  />
</styled.div>
`;

exports[`PluginList should renders with keyword 1`] = `
<styled.div>
  <Plugin
    author="Gattigaga Hayyuta Dewa"
    description="Export to MongoDB file"
    id="3"
    image="image.png"
    isActive={false}
    key="0"
    name="MongoDB Exporter"
    onClick={[Function]}
  />
</styled.div>
`;

exports[`PluginList should renders without plugins 1`] = `
<styled.div>
  <styled.p>
    No plugins found
  </styled.p>
</styled.div>
`;
